Linked the Intro section's "Of the Night Land" page. Corrected the image styles. Changed vertical spacing around bordered image, as it was too uneven. Created Jeremiah Humphries' Night Wrights page, as he has two images as illos in "Of the Night Land". Unfinished.

--- a/css/last-redoubt.css
+++ b/css/last-redoubt.css
@@ -299,7 +299,8 @@ img.bordered {
   border-width: 4px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 3.5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 /* *********************************************
